--- a/WebContent/css/adminView.css
+++ b/WebContent/css/adminView.css
@@ -5,8 +5,6 @@
 	padding: 0;
 }
 
-
-
 li {
 	list-style: none;
 }
@@ -22,6 +20,7 @@ li {
 	line-height: 40px;
 	text-align: center;
 	background: #400080;
+	padding-left:15px;
 }
 
 #nav a {
@@ -47,7 +46,7 @@ li {
 	width: 130px;
 	display: none;
 	position: absolute;
-	margin-left: -20px;
+	margin-left: -10px;
 }
 
 #nav li ul li {
